[metadata]
name = logics-py
version = attr: logics.version.__version__
author = Jan Max Meyer
author_email = jmm@phorward.de
description = Logics is a user-friendly formula language with a subset of Python''s expression syntax
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/viur-framework/logics
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Interpreters

[options]
python_requires = >=3.10
